--- a/sources/RandomDine-Info.plist
+++ b/sources/RandomDine-Info.plist
@@ -10,6 +10,10 @@
 	<string>$(KAKAO_RESTAPI_AUTH_METHOD)</string>
 	<key>KAKAO_REST_API_KEY</key>
 	<string>$(KAKAO_REST_API_KEY)</string>
+	<key>KAKAO_API_PROTOCOL</key>
+	<string>$(KAKAO_API_PROTOCOL)</string>
+	<key>KAKAO_API_DOMAIN</key>
+	<string>$(KAKAO_API_DOMAIN)</string>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
