--- a/sources/RandomDine.xcodeproj/xcshareddata/xcschemes/RandomDine.xcscheme
+++ b/sources/RandomDine.xcodeproj/xcshareddata/xcschemes/RandomDine.xcscheme
@@ -30,7 +30,7 @@
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -49,6 +49,33 @@
             ReferencedContainer = "container:RandomDine.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "KAKAO_RESTAPI_AUTH_METHOD"
+            value = "KakaoAK"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "KAKAO_REST_API_KEY"
+            value = "8b9d47e3885b0f2e06fac729842fc127"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "KAKAO_PHAS"
+            value = "beta"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "KAKAO_APP_KEY"
+            value = "eca26b04e01cbca507c6327c0af4cdcb"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "KAKAO_API_URL"
+            value = "https://dapi.kakao.com/v2"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
