Refactor: View에 종속되어 있던 DB코드를 ViewModel layer로 변경

--- a/sources/RandomDine.xcodeproj/xcshareddata/xcschemes/RandomDine.xcscheme
+++ b/sources/RandomDine.xcodeproj/xcshareddata/xcschemes/RandomDine.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3B0778BD2C17388F0073D572"
+               BuildableName = "RandomDineTests.xctest"
+               BlueprintName = "RandomDineTests"
+               ReferencedContainer = "container:RandomDine.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -49,6 +62,12 @@
             ReferencedContainer = "container:RandomDine.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.SQLDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
