Fix:  카카오맵기반 위치 설정 기능 코드 수정 및 버그 수정

--- a/sources/RandomDine/Resource/RandomDine-Info.plist
+++ b/sources/RandomDine/Resource/RandomDine-Info.plist
@@ -14,6 +14,8 @@
 	<string>$(KAKAO_RESTAPI_AUTH_METHOD)</string>
 	<key>KAKAO_REST_API_KEY</key>
 	<string>$(KAKAO_REST_API_KEY)</string>
+	<key>KAKAO_MAP_API_KEY</key>
+	<string>$(KAKAO_MAP_API_KEY)</string>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
