infofile key 추가

--- a/sources/RandomDine/Resource/RandomDine-Info.plist
+++ b/sources/RandomDine/Resource/RandomDine-Info.plist
@@ -2,8 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIconName</key>
-	<string>AppIcon</string>
+    <key>CFBundleIcons</key>
+    <dict>
+        <key>CFBundlePrimaryIcon</key>
+        <dict>
+            <key>CFBundleIconName</key>
+            <string>AppIcon</string>
+        </dict>
+    </dict>
+    
 	<key>KAKAO_API_DOMAIN</key>
 	<string>$(KAKAO_API_DOMAIN)</string>
 	<key>KAKAO_API_PROTOCOL</key>
